Final Dark Carnival tweaks Dark Carnival mapinfo updates Blocked c2m4 tents and porta potties/hot dog cart Removed a director trigger on c2m1 Removed some added concrete blocks on c2m2 Added some ladders by the end saferoom on c2m1 Tweaked c2m4 saferoom rework Added physics prop trash bins by the first hit on c2m3 Blocked shipping container in c2m3 Block the group of 3 tents before the ladder in kiddyland

--- a/cfg/stripper/maps/c2m1_highway.cfg
+++ b/cfg/stripper/maps/c2m1_highway.cfg
@@ -15,19 +15,6 @@
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
-; --- Replace the HR with a scout
-; --- Uncomment for configs with snipers
-;modify:
-;{
-;	match:
-;	{
-;		"hammerid" "98901"
-;	}
-;	replace:
-;	{
-;		"classname" "weapon_sniper_scout_spawn"
-;	}
-;}
 ; --- Weapons in the upper motel rooms before the drop
 add:
 {
@@ -57,6 +44,18 @@ add:
 ; ==                STATIC AMMO PILES                ==
 ; ==          Add or modify ammo pile spawns         ==
 ; =====================================================
+; --- Make the ammo pile by the humvee always spawn
+modify:
+{
+	match:
+	{
+		"hammerid" "583072"
+	}
+	replace:
+	{
+		"spawnflags" "2"
+	}
+}
 ; --- Replace the HR with an ammo pile
 filter:
 {
@@ -97,6 +96,16 @@ add:
 }
 ; --- Prevent nearby item spawns from being ammo piles
 modify:
+{
+	match:
+	{
+		"hammerid" "1779535"
+	}
+	replace:
+	{
+		"item1" "0"
+	}
+}
 {
 	match:
 	{
@@ -1066,6 +1075,11 @@ modify:
 ; ==              TRIGGER REMOVAL / FIX              ==
 ; ==    Fix triggers that interfere with gameplay    ==
 ; =====================================================
+; --- Remove a trigger before the one way drop that sets some director spawn limits
+filter:
+{
+	"hammerid" "999996"
+}
 
 
 ; #############  LADDER CHANGES AND FIXES  ############
@@ -1132,6 +1146,28 @@ add:
 	"model" "*114"
 	"normal.x" "1.00"
 	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Additional infected ladder behind the fence by the alarm car at the end of the map
+{
+	"classname" "func_simpleladder"
+	"origin" "-66 -515 0"
+	"angles" "0 0 0"
+	"model" "*112"
+	"normal.x" "1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Infected ladder on the fence behind the end saferoom
+{
+	"classname" "func_simpleladder"
+	"origin" "1202 -2603 5"
+	"angles" "0 270 0"
+	"model" "*112"
+	"normal.x" "0.00"
+	"normal.y" "-1.00"
 	"normal.z" "0.00"
 	"team" "2"
 }
