--- a/cfg/stripper/maps/c2m2_fairgrounds.cfg
+++ b/cfg/stripper/maps/c2m2_fairgrounds.cfg
@@ -580,6 +580,34 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
+; --- Block the group of tents by the generators in kiddyland
+{
+	"classname" "env_physics_blocker"
+	"origin" "-2276 -882 383"
+	"mins" "-64 -64 -385"
+	"maxs" "64 64 385"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-2274 -1016 383"
+	"mins" "-64 -64 -385"
+	"maxs" "64 64 385"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-2278 -1154 383"
+	"angles" "0 4 0"
+	"mins" "-64 -64 -385"
+	"maxs" "64 64 385"
+	"boxmins" "-64 -64 -385"
+	"boxmaxs" "64 64 385"
+	"initialstate" "1"
+	"BlockType" "1"
+}
 ; --- Block climbing on the generators in kiddyland
 {
 	"classname" "env_physics_blocker"
@@ -982,7 +1010,7 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Extra concrete blocks to spawn behind and jump over the fences by the warehouse entrance
+; --- Concrete block to spawn behind and jump over the fences by the warehouse entrance
 {
 	"classname" "prop_dynamic"
 	"origin" "3023 -1888 42"
@@ -990,31 +1018,6 @@ add:
 	"model" "models/props_fortifications/concrete_block001_128_reference.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "2656 -1840 1"
-	"angles" "0 90 0"
-	"model" "models/props_fortifications/concrete_block001_128_reference.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "2656 -1840 41"
-	"angles" "0 90 0"
-	"model" "models/props_fortifications/concrete_block001_128_reference.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-; --- Clipping to allow jumping over the fence because the clipbrushes are bad
-{
-	"classname" "env_physics_blocker"
-	"origin" "2656 -1840 84"
-	"mins" "-62 -18 -3"
-	"maxs" "62 18 3"
-	"initialstate" "1"
-	"BlockType" "2"
 }
 ; --- AC vent on the warehouse roof for spawns and to get on the upper roof section
 {
@@ -1110,7 +1113,6 @@ add:
 	"disableshadows" "1"
 	"rendercolor" "74 104 149"
 }
-
 ; --- Tent in kiddyland by the buggies ride
 {
 	"classname" "prop_dynamic"
