--- a/cfg/stripper/maps/c2m3_coaster.cfg
+++ b/cfg/stripper/maps/c2m3_coaster.cfg
@@ -212,6 +212,15 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
+; --- Block the shipping container by the tunnel of love exit
+{
+	"classname" "env_physics_blocker"
+	"origin" "-896 2241 560"
+	"mins" " -68 -197 -400"
+	"maxs" "68 197 400"
+	"initialstate" "1"
+	"BlockType" "1"
+}
 ; --- Block the shipping container by the pill room
 {
 	"classname" "env_physics_blocker"
@@ -909,6 +918,22 @@ add:
 ; ==                      PROPS                      ==
 ; ==       New props for balance and SI spawns       ==
 ; =====================================================
+add:
+; --- Physics prop trash bins by the saferoom for some extra, but preventable, spawns
+{
+	"classname" "prop_physics"
+	"origin" "2652 2269 -7"
+	"angles" "0 270 0"
+	"model" "models/props_street/trashbin01.mdl"
+	"solid" "6"
+}
+{
+	"classname" "prop_physics"
+	"origin" "2684 2271 13"
+	"angles" "0 270 0"
+	"model" "models/props_junk/trashbin01a.mdl"
+	"solid" "6"
+}
 
 ; =====================================================
 ; ==                   LADDER NERF                   ==
@@ -1400,19 +1425,11 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Boxes in the corner
+; --- Boxes and fences in the corner
 {
 	"classname" "prop_dynamic"
-	"origin" "-5130 1943 4"
-	"angles" "0 270 0"
-	"model" "models/props/cs_militia/boxes_frontroom.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "-5096 1867 4"
-	"angles" "0 314.5 0"
+	"origin" "-5078 1869 4"
+	"angles" "0 224.5 0"
 	"model" "models/props/cs_militia/boxes_garage_lower.mdl"
 	"solid" "6"
 	"disableshadows" "1"
@@ -1433,15 +1450,25 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Props to block the door
 {
 	"classname" "prop_dynamic"
-	"origin" "-4999 1800 62"
-	"angles" "0 90 -81.5"
-	"model" "models/props_fairgrounds/coaster_car01.mdl"
+	"origin" "-5118 1931 4"
+	"angles" "0 176.5 0"
+	"model" "models/props_fortifications/police_barrier001_128_reference.mdl"
 	"solid" "6"
 	"disableshadows" "1"
+	"skin" "1"
 }
+{
+	"classname" "prop_dynamic"
+	"origin" "-5104 1933 4"
+	"angles" "0 176.5 0"
+	"model" "models/props_fortifications/police_barrier001_128_reference.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"skin" "1"
+}
+; --- Fences to block the door
 {
 	"classname" "prop_dynamic"
 	"origin" "-5001 1475 4"
@@ -1454,6 +1481,15 @@ add:
 {
 	"classname" "prop_dynamic"
 	"origin" "-5015 1472 4"
+	"angles" "0 180 0"
+	"model" "models/props_fortifications/police_barrier001_128_reference.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"skin" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-5028 1475 4"
 	"angles" "0 180 0"
 	"model" "models/props_fortifications/police_barrier001_128_reference.mdl"
 	"solid" "6"
