--- a/cfg/stripper/maps/c2m4_barns.cfg
+++ b/cfg/stripper/maps/c2m4_barns.cfg
@@ -185,6 +185,23 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
+; --- Block standing on the tents by the bumper cars
+{
+	"classname" "env_physics_blocker"
+	"origin" "2483 2048 544"
+	"mins" "-67 -192 -608"
+	"maxs" "67 192 608"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "2778 2116 544"
+	"mins" "-67 -126 -608"
+	"maxs" "67 126 608"
+	"initialstate" "1"
+	"BlockType" "1"
+}
 ; --- Block survivors from getting on/over the hedges by the gazebo
 {
 	"classname" "env_physics_blocker"
@@ -199,6 +216,35 @@ add:
 	"origin" "3082 1900 485"
 	"mins" "-24 -513 -539"
 	"maxs" "24 513 539"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Block standing on the porta potties by the bumper cars
+{
+	"classname" "env_physics_blocker"
+	"origin" "2496 686 482"
+	"mins" "-28 -28 -542"
+	"maxs" "28 28 542"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "2568 687 482"
+	"angles" "0 -5.5 0"
+	"mins" "-28 -28 -542"
+	"maxs" "28 28 542"
+	"boxmins" "-28 -28 -542"
+	"boxmaxs" "28 28 542"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Block standing on the food cart by the bumper cars
+{
+	"classname" "env_physics_blocker"
+	"origin" "2338 703 488"
+	"mins" "-28 -52 -536"
+	"maxs" "107 52 536"
 	"initialstate" "1"
 	"BlockType" "1"
 }
@@ -1088,19 +1134,11 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Boxes in the corner
+; --- Boxes and fences in the corner
 {
 	"classname" "prop_dynamic"
-	"origin" "3238 3863 -188"
-	"angles" "0 270 0"
-	"model" "models/props/cs_militia/boxes_frontroom.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "3272 3787 -188"
-	"angles" "0 314.5 0"
+	"origin" "3290 3789 -188"
+	"angles" "0 224.5 0"
 	"model" "models/props/cs_militia/boxes_garage_lower.mdl"
 	"solid" "6"
 	"disableshadows" "1"
@@ -1121,18 +1159,49 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Props to block the door
 {
 	"classname" "prop_dynamic"
-	"origin" "3360 3583 -130"
-	"angles" "0 90 -81.5"
-	"model" "models/props_fairgrounds/coaster_car01.mdl"
+	"origin" "3250 3851 -188"
+	"angles" "0 176.5 0"
+	"model" "models/props_fortifications/police_barrier001_128_reference.mdl"
 	"solid" "6"
 	"disableshadows" "1"
+	"skin" "1"
 }
 {
 	"classname" "prop_dynamic"
-	"origin" "3309 3581 -188"
+	"origin" "3264 3853 -188"
+	"angles" "0 176.5 0"
+	"model" "models/props_fortifications/police_barrier001_128_reference.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"skin" "1"
+}
+; --- Clipping on fences
+{
+	"classname" "env_physics_blocker"
+	"origin" "3257 3852 -163"
+	"angles" "0 -3.5 0"
+	"mins" "-8 -65 -24"
+	"maxs" "8 65 24"
+	"boxmins" "-8 -65 -24"
+	"boxmaxs" "8 65 24"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+; --- Fences to block the door
+{
+	"classname" "prop_dynamic"
+	"origin" "3353 3559 -129"
+	"angles" "-6.5 180 90"
+	"model" "models/props_fortifications/police_barrier001_128_reference.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"skin" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "3339 3588 -188"
 	"angles" "0 178.5 0"
 	"model" "models/props_fortifications/police_barrier001_128_reference.mdl"
 	"solid" "6"
@@ -1141,19 +1210,19 @@ add:
 }
 {
 	"classname" "prop_dynamic"
-	"origin" "3295 3578 -188"
+	"origin" "3325 3585 -188"
 	"angles" "0 180 0"
 	"model" "models/props_fortifications/police_barrier001_128_reference.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 	"skin" "1"
 }
-; --- Clipping on props by the door
+; --- Clipping on fences
 {
 	"classname" "env_physics_blocker"
-	"origin" "3345 3574 -100"
-	"mins" "-29.5 -44.5 -88"
-	"maxs" "29.5 44.5 88"
+	"origin" "3332 3585 -164"
+	"mins" "-8 -64 -24"
+	"maxs" "9 64 24"
 	"initialstate" "1"
 	"BlockType" "0"
 }
