Completed work on c4m1/4/5 Dead Center 2 scoring tweaks Block survivors standing on the shelves at the tunnel of love exit (c2m3) Apply c2m5 shadow fix on finale start Added non-competitive items to global filters Fixed tank spawn direction on c1m4

--- a/cfg/stripper/global_filters.cfg
+++ b/cfg/stripper/global_filters.cfg
@@ -78,3 +78,224 @@ filter:
 {
 	"classname" "env_soundscape"
 }
+
+; =====================================================
+; ==             COMPETITIVE ITEM SPAWNS             ==
+; ==        Remove non-competitive item spawns       ==
+; =====================================================
+; --- Gas Cans
+modify:
+{
+	match:
+	{
+		"classname" "weapon_item_spawn"
+	}
+	replace:
+	{
+		"item8" "0"
+	}
+}
+filter:
+{
+	"classname" "weapon_gascan_spawn"
+}
+{
+	"classname" "weapon_gascan"
+}
+; --- Propane Tanks
+modify:
+{
+	match:
+	{
+		"classname" "weapon_item_spawn"
+	}
+	replace:
+	{
+		"item7" "0"
+	}
+}
+filter:
+{
+	"classname" "prop_physics"
+	"model" "models/props_junk/propanecanister001a.mdl"
+}
+; --- Oxygen Tanks
+modify:
+{
+	match:
+	{
+		"classname" "weapon_item_spawn"
+	}
+	replace:
+	{
+		"item6" "0"
+	}
+}
+filter:
+{
+	"classname" "prop_physics"
+	"model" "models/props_equipment/oxygentank01.mdl"
+}
+; --- Molotovs
+modify:
+{
+	match:
+	{
+		"classname" "weapon_item_spawn"
+	}
+	replace:
+	{
+		"item3" "0"
+	}
+}
+filter:
+{
+	"classname" "weapon_molotov_spawn"
+}
+{
+	"classname" "weapon_molotov"
+}
+; --- Pipe Bombs
+modify:
+{
+	match:
+	{
+		"classname" "weapon_item_spawn"
+	}
+	replace:
+	{
+		"item5" "0"
+	}
+}
+filter:
+{
+	"classname" "weapon_pipe_bomb_spawn"
+}
+{
+	"classname" "weapon_pipe_bomb"
+}
+; --- Bile Jars
+modify:
+{
+	match:
+	{
+		"classname" "weapon_item_spawn"
+	}
+	replace:
+	{
+		"item13" "0"
+	}
+}
+filter:
+{
+	"classname" "weapon_vomitjar_spawn"
+}
+{
+	"classname" "weapon_vomitjar"
+}
+; --- Defibrillators
+modify:
+{
+	match:
+	{
+		"classname" "weapon_item_spawn"
+	}
+	replace:
+	{
+		"item12" "0"
+	}
+}
+filter:
+{
+	"classname" "weapon_defibrillator_spawn"
+}
+{
+	"classname" "weapon_defibrillator"
+}
+; --- Adrenaline
+modify:
+{
+	match:
+	{
+		"classname" "weapon_item_spawn"
+	}
+	replace:
+	{
+		"item11" "0"
+	}
+}
+filter:
+{
+	"classname" "weapon_adrenaline_spawn"
+}
+{
+	"classname" "weapon_adrenaline"
+}
+; --- Grenade Launchers
+modify:
+{
+	match:
+	{
+		"classname" "weapon_item_spawn"
+	}
+	replace:
+	{
+		"item17" "0"
+	}
+}
+filter:
+{
+	"classname" "weapon_grenade_launcher_spawn"
+}
+{
+	"classname" "weapon_grenade_launcher"
+}
+; --- Chainsaws
+modify:
+{
+	match:
+	{
+		"classname" "weapon_item_spawn"
+	}
+	replace:
+	{
+		"item16" "0"
+	}
+}
+filter:
+{
+	"classname" "weapon_chainsaw_spawn"
+}
+{
+	"classname" "weapon_chainsaw"
+}
+; --- M60
+modify:
+{
+	match:
+	{
+		"classname" "weapon_item_spawn"
+	}
+	replace:
+	{
+		"item18" "0"
+	}
+}
+filter:
+{
+	"classname" "weapon_rifle_m60_spawn"
+}
+{
+	"classname" "weapon_rifle_m60"
+}
+; --- Upgrade Packs
+filter:
+{
+	"classname" "upgrade_spawn"
+}
+{
+	"classname" "weapon_upgradepack_explosive_spawn"
+}
+{
+	"classname" "weapon_upgradepack_incendiary_spawn"
+}
