--- a/cfg/stripper/maps/c1m3_mall.cfg
+++ b/cfg/stripper/maps/c1m3_mall.cfg
@@ -3,6 +3,11 @@
 ; ==          DIRECTOR & EVENT MODIFICATION          ==
 ; ==       Modify director behaviour and events      ==
 ; =====================================================
+; --- Remove script that causes the entire map to behave like a gauntlet event, causing horde waves to be spawned as survivors moved through the map
+filter:
+{
+	"hammerid" "8442672"
+}
 ; --- Force survivors to always take the lower path
 modify:
 {
