--- a/cfg/stripper/maps/c1m4_atrium.cfg
+++ b/cfg/stripper/maps/c1m4_atrium.cfg
@@ -14,6 +14,7 @@ modify:
 	{
 		"OnPressed" "pre_event_tankSpawnZombie29-1"
 		"OnPressed" "tank_wrongwayEnable28-1"
+		"OnPressed" "tank_teleport_trigger,Enable,,29,-1"
 	}
 }
 add:
@@ -25,7 +26,7 @@ add:
 	"offer_tank" "1"
 	"targetname" "pre_event_tank"
 }
-; --- Wrong way sign since we can't fix the angle the tank spawns facing towards
+; --- Wrong way sign for tanks that go the wrong way
 {
 	"classname" "prop_dynamic"
 	"origin" "-2371 -4844 545"
@@ -36,6 +37,31 @@ add:
 	"rendercolor" "255 255 255"
 	"targetname" "tank_wrongway"
 	"StartDisabled" "1"
+}
+; --- Fix tank spawn direction
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "tank_teleport_triggerAddOutputmins -134 -64 -1280-1"
+	"OnMapSpawn" "tank_teleport_triggerAddOutputmaxs 134 64 1280-1"
+	"OnMapSpawn" "tank_teleport_triggerAddOutputboxmins -134 -64 -1280-1"
+	"OnMapSpawn" "tank_teleport_triggerAddOutputboxmaxs 134 64 1280-1"
+	"OnMapSpawn" "tank_teleport_triggerAddOutputsolid 20-1"
+}
+{
+	"classname" "trigger_teleport"
+	"origin" "-2459 -4848 664"
+	"targetname" "tank_teleport_trigger"
+	"filtername" "filter_infected"
+	"spawnflags" "1"
+	"StartDisabled" "1"
+	"target" "tank_spawn_position"
+	"OnStartTouch" "tank_teleport_triggerKill0-1"
+}
+{
+	"classname" "info_teleport_destination"
+	"origin" "-2478 -4847 545"
+	"angles" "0 180 0"
+	"targetname" "tank_spawn_position"
 }
 
 
