--- a/cfg/stripper/maps/c2m3_coaster.cfg
+++ b/cfg/stripper/maps/c2m3_coaster.cfg
@@ -163,6 +163,15 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
+; --- Block survivors standing on the shelves at the tunnel of love exit
+{
+	"classname" "env_physics_blocker"
+	"origin" "-664 2015 96"
+	"mins" "-77 -33 -96"
+	"maxs" "77 33 96"
+	"initialstate" "1"
+	"BlockType" "1"
+}
 ; --- Block jumping on the rolling doors before the coaster
 {
 	"classname" "env_physics_blocker"
