--- a/cfg/stripper/maps/c2m5_concert.cfg
+++ b/cfg/stripper/maps/c2m5_concert.cfg
@@ -219,8 +219,8 @@ add:
 ; ==                      PROPS                      ==
 ; ==       New props for balance and SI spawns       ==
 ; =====================================================
+; --- Fix props disappearing by toggling shadows on map start / round change
 add:
-; --- Fix props disappearing by toggling shadows
 {
 	"classname" "logic_auto"
 	"OnMapSpawn" "_props_shadow_fixEnableShadow30-1"
@@ -241,6 +241,34 @@ add:
 	"OnMapSpawn" "anv_mapfixes_yesdraw_infectedroomDisableShadow29-1"
 	
 }
+; --- Additional toggle on finale start
+modify:
+{
+	match:
+	{
+		"targetname" "stage_escape_button"
+	}
+	insert:
+	{
+		"FinaleStart" "_props_shadow_fixEnableShadow0-1"
+		"FinaleStart" "_props_shadow_fixDisableShadow1-1"
+		; --- Props added by TLS
+		"FinaleStart" "anv_mapfixes_helistuck_caseuniqueEnableShadow1-1"
+		"FinaleStart" "anv_mapfixes_helistuck_caseuniqueDisableShadow2-1"
+		"FinaleStart" "anv_mapfixes_helistuck_casecasterEnableShadow1-1"
+		"FinaleStart" "anv_mapfixes_helistuck_casecasterDisableShadow2-1"
+		"FinaleStart" "anv_mapfixes_missing_staircaseEnableShadow1-1"
+		"FinaleStart" "anv_mapfixes_missing_staircaseDisableShadow2-1"
+		"FinaleStart" "anv_mapfixes_yesdraw_infecteddoorwayEnableShadow1-1"
+		"FinaleStart" "anv_mapfixes_yesdraw_infecteddoorwayDisableShadow2-1"
+		"FinaleStart" "anv_mapfixes_yesdraw_infectedroomEnableShadow1-1"
+		"FinaleStart" "anv_mapfixes_yesdraw_infectedroomDisableShadow2-1"
+		; --- Disable shadows early on props added that start with shadows enabled to ensure the fix works
+		"FinaleStart" "anv_mapfixes_yesdraw_infecteddoorwayDisableShadow0-1"
+		"FinaleStart" "anv_mapfixes_yesdraw_infectedroomDisableShadow0-1"
+	}
+}
+add:
 ; --- Trash bags to help infected get on tents outside saferoom
 {
 	"classname" "prop_dynamic"
