Completed work on c4m2/3 Added tree and a clip to c4m1/5 Fixed sugarmill (c4m1/c4m4) saferoominfo position Reworked some c1m3 changes by the end saferoom Updated mapinfo for Dead Center, Hard Rain

--- a/cfg/stripper/maps/c2m2_fairgrounds.cfg
+++ b/cfg/stripper/maps/c2m2_fairgrounds.cfg
@@ -1279,6 +1279,12 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 	"rendercolor" "193 197 188"
+	"lightingorigin" "hedge_lighting"
+}
+{
+	"classname" "info_target"
+	"origin" "-2924 -6274 -127"
+	"targetname" "hedge_lighting"
 }
 ; --- Open tent by the end saferoom with concert equipment inside
 {
