--- a/cfg/stripper/maps/c4m1_milltown_a.cfg
+++ b/cfg/stripper/maps/c4m1_milltown_a.cfg
@@ -615,6 +615,18 @@ add:
 ; ==      Clipping improvements, QOL map changes     ==
 ; =====================================================
 add:
+; --- Cliping on pickup truck by burger tank to make the jump to the awning possible on all tickrates
+{
+	"classname" "env_physics_blocker"
+	"origin" "-5374 7281 193"
+	"angles" "0 -8.5 0"
+	"mins" "-24 -30 -3"
+	"maxs" "24 30 3"
+	"boxmins" "-24 -30 -3"
+	"boxmaxs" "24 30 3"
+	"initialstate" "1"
+	"BlockType" "0"
+}
 ; --- Clipping on floating tree by burger tank
 {
 	"classname" "env_physics_blocker"
@@ -790,6 +802,15 @@ modify:
 ; ==       New props for balance and SI spawns       ==
 ; =====================================================
 add:
+; --- Tree near the collapsed fence by the burger tank
+{
+	"classname" "prop_dynamic"
+	"origin" "-3794 6922 98"
+	"angles" "0 270 0"
+	"model" "models/props_foliage/urban_tree_giant01_medium.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
 ; --- Hedges by the boat near the playground
 {
 	"classname" "prop_dynamic"
