--- a/cfg/stripper/maps/c4m5_milltown_escape.cfg
+++ b/cfg/stripper/maps/c4m5_milltown_escape.cfg
@@ -228,6 +228,18 @@ add:
 ; ==      Clipping improvements, QOL map changes     ==
 ; =====================================================
 add:
+; --- Cliping on pickup truck by burger tank to make the jump to the awning possible on all tickrates
+{
+	"classname" "env_physics_blocker"
+	"origin" "-5374 7281 193"
+	"angles" "0 -8.5 0"
+	"mins" "-24 -30 -3"
+	"maxs" "24 30 3"
+	"boxmins" "-24 -30 -3"
+	"boxmaxs" "24 30 3"
+	"initialstate" "1"
+	"BlockType" "0"
+}
 ; --- Clipping on floating tree by burger tank
 {
 	"classname" "env_physics_blocker"
@@ -262,6 +274,16 @@ add:
 ; ==                      PROPS                      ==
 ; ==       New props for balance and SI spawns       ==
 ; =====================================================
+add:
+; --- Tree near the collapsed fence by the burger tank
+{
+	"classname" "prop_dynamic"
+	"origin" "-3794 6922 98"
+	"angles" "0 270 0"
+	"model" "models/props_foliage/urban_tree_giant01_medium.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
 
 ; =====================================================
 ; ==                   LADDER NERF                   ==
