--- a/cfg/stripper/global_filters.cfg
+++ b/cfg/stripper/global_filters.cfg
@@ -97,6 +97,10 @@ modify:
 }
 filter:
 {
+	"classname" "prop_physics"
+	"model" "models/props_junk/gascan001a.mdl"
+}
+{
 	"classname" "weapon_gascan_spawn"
 }
 {
