Completed initial work on c5m1/c5m2 Fixed some minor mistakes in Hard Rain comments, removed redundant clip on map 4

--- a/cfg/stripper/maps/c4m1_milltown_a.cfg
+++ b/cfg/stripper/maps/c4m1_milltown_a.cfg
@@ -889,7 +889,7 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Breakable boards in the broken / unfinished h9ouse by the playground
+; --- Breakable boards in the broken / unfinished house by the playground
 {
 	"classname" "prop_physics"
 	"origin" "-396 6157 328"
@@ -1156,7 +1156,7 @@ add:
 	"normal.z" "0.00"
 	"team" "2"
 }
-; -- Infected ladder to get on building to the left of the burger tank from behind the fences
+; --- Infected ladder to get on the taller building by the burger tank from behind the fences
 {
 	"classname" "func_simpleladder"
 	"origin" "2402 14762 0"
