--- a/cfg/stripper/maps/c4m2_sugarmill_a.cfg
+++ b/cfg/stripper/maps/c4m2_sugarmill_a.cfg
@@ -23,6 +23,11 @@ filter:
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
+; --- Remove health cabinets
+filter:
+{
+	"classname" "prop_health_cabinet"
+}
 modify:
 ; --- Ensure weapon spawn groups have a shotgun and uzi each
 ; --- Collapsed silos trailer
@@ -155,7 +160,7 @@ add:
 ; ==      Block intentionally performed exploits     ==
 ; =====================================================
 add:
-; --- Block window off ducatel building by the construction site that can be used to skip to top floor
+; --- Block window of ducatel building by the construction site that can be used to skip to top floor
 {
 	"classname" "env_physics_blocker"
 	"origin" "4230 -3136 304"
@@ -417,7 +422,7 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
-; --- Block survivors from standing on the truck by the 2 silos near the elevator
+; --- Block survivors from standing on the truck by the warehouse near the elevator
 {
 	"classname" "env_physics_blocker"
 	"origin" "41 -8191 1408"
