--- a/cfg/stripper/maps/c4m4_milltown_b.cfg
+++ b/cfg/stripper/maps/c4m4_milltown_b.cfg
@@ -632,26 +632,6 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Clipping on pickup truck by ladder to prevent getting stuck
-{
-	"classname" "env_physics_blocker"
-	"origin" "-3153 7445 167"
-	"angles" "33 -4.5 0"
-	"mins" "-31.5 -36 -1"
-	"maxs" "31.5 36 1"
-	"boxmins" "-31.5 -36 -1"
-	"boxmaxs" "31.5 36 1"
-	"initialstate" "1"
-	"BlockType" "0"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "-3140 7436 158"
-	"mins" "-36 -51 -4"
-	"maxs" "36 51 4"
-	"initialstate" "1"
-	"BlockType" "0"
-}
 ; --- Clipping on balcony railing by the playground
 {
 	"classname" "env_physics_blocker"
@@ -826,7 +806,7 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Breakable boards in the broken / unfinished h9ouse by the playground
+; --- Breakable boards in the broken / unfinished house by the playground
 {
 	"classname" "prop_physics"
 	"origin" "-396 6157 328"
