--- a/cfg/stripper/maps/c4m5_milltown_escape.cfg
+++ b/cfg/stripper/maps/c4m5_milltown_escape.cfg
@@ -355,7 +355,7 @@ add:
 	"normal.z" "0.00"
 	"team" "2"
 }
-; -- Infected ladder to get on building to the left of the burger tank from behind the fences
+; --- Infected ladder to get on the taller building by the burger tank from behind the fences
 {
 	"classname" "func_simpleladder"
 	"origin" "2402 14762 0"
