Update readme with credit Updated global filters for explosives

--- a/cfg/stripper/global_filters.cfg
+++ b/cfg/stripper/global_filters.cfg
@@ -123,6 +123,12 @@ filter:
 	"classname" "prop_physics"
 	"model" "models/props_junk/propanecanister001a.mdl"
 }
+{
+	"classname" "weapon_propanetank_spawn"
+}
+{
+	"classname" "weapon_propanetank"
+}
 ; --- Oxygen Tanks
 modify:
 {
@@ -139,6 +145,12 @@ filter:
 {
 	"classname" "prop_physics"
 	"model" "models/props_equipment/oxygentank01.mdl"
+}
+{
+	"classname" "weapon_oxygentank_spawn"
+}
+{
+	"classname" "weapon_oxygentank"
 }
 ; --- Molotovs
 modify:
