Completed work on c5m3 c5m2 door speed and fence clip

--- a/cfg/stripper/maps/c5m2_park.cfg
+++ b/cfg/stripper/maps/c5m2_park.cfg
@@ -541,6 +541,27 @@ modify:
 		"spawnflags" "260"
 	}
 }
+; --- Make the CEDA doors open faster
+{
+	match:
+	{
+		"targetname" "finale_cleanse_entrance_door"
+	}
+	replace:
+	{
+		"speed" "120"
+	}
+}
+{
+	match:
+	{
+		"targetname" "finale_cleanse_exit_door"
+	}
+	replace:
+	{
+		"speed" "120"
+	}
+}
 ; --- Remove the trash can in the alley
 filter:
 {
@@ -729,6 +750,15 @@ add:
 	"origin" "-9140 -4760 183"
 	"mins" "-94.5 -15 -3"
 	"maxs" "94.5 15 3"
+	"initialstate" "1"
+	"BlockType" "2"
+}
+; --- Clipping on fence to the right of CEDA trailer to help infected jump on top of the purple clips
+{
+	"classname" "env_physics_blocker"
+	"origin" "-9399 -6320 -119"
+	"mins" "-3 -4 -9"
+	"maxs" "3 4 9"
 	"initialstate" "1"
 	"BlockType" "2"
 }
