Fixed single pickup weapons having no reserve ammo Updated global filters Updated readme Remove collsion from added in light on c1m2

--- a/_Templates/entity_template.cfg
+++ b/_Templates/entity_template.cfg
@@ -80,11 +80,13 @@ add:
 }
 ; --- Single Pickup Weapon Only
 ; --- NOTE: CAN be used for single pickup weapons in versus
+; --- NOTE: Requires reserve ammo to be specified, otherwise it will have none (value will not exceed max allowed)
 add:
 {
 	"classname" "[weapon type]"
 	"origin" "[x y z]"
 	"angles" "[p y r]"
+	"ammo" "[n]"
 }
 ; --- Melee Weapons
 ; --- NOTE: Use "any" for a random melee weapon
