--- a/cfg/stripper/global_filters.cfg
+++ b/cfg/stripper/global_filters.cfg
@@ -1,4 +1,69 @@
 ; =====================================================
+; ==                  WITCH REMOVAL                  ==
+; ==           Remove scripted witch spawns          ==
+; =====================================================
+;filter:
+;{
+;	"targetname" "witch_spawn"
+;}
+;{
+;	"targetname" "witch_case"
+;}
+;{
+;	"targetname" "bridewitch"
+;}
+
+; =====================================================
+; ==               T2 WEAPON SPAWN FIX               ==
+; ==  Prevent director from spawning tier 2 weapons  ==
+; =====================================================
+modify:
+{
+	match:
+	{
+		"classname" "weapon_spawn"
+		"weapon_selection" "any_primary"
+	}
+	replace:
+	{
+		"weapon_selection" "tier1_any"
+	}
+}
+{
+	match:
+	{
+		"classname" "weapon_spawn"
+		"weapon_selection" "tier2_any"
+	}
+	replace:
+	{
+		"weapon_selection" "tier1_any"
+	}
+}
+{
+	match:
+	{
+		"classname" "weapon_spawn"
+		"weapon_selection" "any"
+	}
+	replace:
+	{
+		"weapon_selection" "tier1_any"
+	}
+}
+{
+	match:
+	{
+		"classname" "weapon_spawn"
+		"weapon_selection" "any_sniper_rifle"
+	}
+	replace:
+	{
+		"weapon_selection" "tier1_any"
+	}
+}
+
+; =====================================================
 ; ==           INFECTED CLIP / TRIGGER FIX           ==
 ; ==  Remove or fix clips and triggers for infected  ==
 ; =====================================================
@@ -80,9 +145,224 @@ filter:
 }
 
 ; =====================================================
+; ==                  VISUAL EFFECTS                 ==
+; ==          Remove annoying visual effects         ==
+; =====================================================
+filter:
+{
+	"classname" "env_sun"
+}
+
+; =====================================================
+; ==                 ITEM PICKUP FIX                 ==
+; ==     Fix item spawns having multiple pickups     ==
+; =====================================================
+modify:
+; --- Melee weapon spawns
+{
+	match:
+	{
+		"targetname" "weapon_melee_spawn"
+	}
+	replace:
+	{
+		"count" "1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "weapon_melee_spawn"
+		"spawnflags" "8"
+	}
+	replace:
+	{
+		"spawnflags" "0"
+	}
+}
+{
+	match:
+	{
+		"targetname" "weapon_melee_spawn"
+		"spawnflags" "9"
+	}
+	replace:
+	{
+		"spawnflags" "1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "weapon_melee_spawn"
+		"spawnflags" "10"
+	}
+	replace:
+	{
+		"spawnflags" "2"
+	}
+}
+{
+	match:
+	{
+		"targetname" "weapon_melee_spawn"
+		"spawnflags" "11"
+	}
+	replace:
+	{
+		"spawnflags" "3"
+	}
+}
+{
+	match:
+	{
+		"targetname" "weapon_melee_spawn"
+		"spawnflags" "12"
+	}
+	replace:
+	{
+		"spawnflags" "4"
+	}
+}
+{
+	match:
+	{
+		"targetname" "weapon_melee_spawn"
+		"spawnflags" "13"
+	}
+	replace:
+	{
+		"spawnflags" "5"
+	}
+}
+{
+	match:
+	{
+		"targetname" "weapon_melee_spawn"
+		"spawnflags" "14"
+	}
+	replace:
+	{
+		"spawnflags" "6"
+	}
+}
+{
+	match:
+	{
+		"targetname" "weapon_melee_spawn"
+		"spawnflags" "15"
+	}
+	replace:
+	{
+		"spawnflags" "7"
+	}
+}
+; --- General item spawns
+{
+	match:
+	{
+		"targetname" "weapon_item_spawn"
+		"spawnflags" "8"
+	}
+	replace:
+	{
+		"spawnflags" "0"
+	}
+}
+{
+	match:
+	{
+		"targetname" "weapon_item_spawn"
+		"spawnflags" "9"
+	}
+	replace:
+	{
+		"spawnflags" "1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "weapon_item_spawn"
+		"spawnflags" "10"
+	}
+	replace:
+	{
+		"spawnflags" "2"
+	}
+}
+{
+	match:
+	{
+		"targetname" "weapon_item_spawn"
+		"spawnflags" "11"
+	}
+	replace:
+	{
+		"spawnflags" "3"
+	}
+}
+; --- Pain pill spawns
+{
+	match:
+	{
+		"targetname" "weapon_pain_pills_spawn"
+		"spawnflags" "8"
+	}
+	replace:
+	{
+		"spawnflags" "0"
+	}
+}
+{
+	match:
+	{
+		"targetname" "weapon_pain_pills_spawn"
+		"spawnflags" "9"
+	}
+	replace:
+	{
+		"spawnflags" "1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "weapon_pain_pills_spawn"
+		"spawnflags" "10"
+	}
+	replace:
+	{
+		"spawnflags" "2"
+	}
+}
+{
+	match:
+	{
+		"targetname" "weapon_pain_pills_spawn"
+		"spawnflags" "11"
+	}
+	replace:
+	{
+		"spawnflags" "3"
+	}
+}
+
+; =====================================================
 ; ==             COMPETITIVE ITEM SPAWNS             ==
 ; ==        Remove non-competitive item spawns       ==
 ; =====================================================
+; --- Miniguns
+filter:
+{
+	"classname" "prop_minigun"
+}
+{
+	"classname" "prop_minigun_l4d1"
+}
+{
+	"classname" "prop_mounted_machine_gun"
+}
 ; --- Gas Cans
 modify:
 {
@@ -151,6 +431,14 @@ filter:
 }
 {
 	"classname" "weapon_oxygentank"
+}
+; --- Fireworks
+{
+	"classname" "prop_physics"
+	"model" "models/props_junk/explosive_box001.mdl"
+}
+{
+	"classname" "weapon_fireworkcrate"
 }
 ; --- Molotovs
 modify:
@@ -315,3 +603,23 @@ filter:
 {
 	"classname" "weapon_upgradepack_incendiary_spawn"
 }
+
+; =====================================================
+; ==                JUNK PROP CLEANUP                ==
+; ==            Remove junk physics props            ==
+; =====================================================
+filter:
+{
+	"classname" "prop_physics"
+	"model" "/.*props_junk/garbage.*/"
+}
+
+; =====================================================
+; ==             IMMOVABLE PHYSICS PROPS             ==
+; ==            Make selected props static           ==
+; =====================================================
+
+; =====================================================
+; ==                PROP COLLISION FIX               ==
+; ==       Remove collision with selected props      ==
+; =====================================================
