Fixed single pickup weapons having no reserve ammo Updated global filters Updated readme Remove collsion from added in light on c1m2

--- a/cfg/stripper/maps/c1m1_hotel.cfg
+++ b/cfg/stripper/maps/c1m1_hotel.cfg
@@ -120,11 +120,13 @@ add:
 	"classname" "weapon_smg_silenced"
 	"origin" "423 5512 2895"
 	"angles" "0 236.5 84"
+	"ammo" "650"
 }
 {
 	"classname" "weapon_shotgun_chrome"
 	"origin" "444 5480 2861"
 	"angles" "-76.7195 199.715 70.0679"
+	"ammo" "72"
 }
 
 ; =====================================================
@@ -143,11 +145,13 @@ add:
 	"classname" "weapon_smg"
 	"origin" "1679 5813 2699"
 	"angles" "0 287.5 84"
+	"ammo" "650"
 }
 {
 	"classname" "weapon_pumpshotgun"
 	"origin" "1681 5765 2667"
 	"angles" "-80.826 60.7614 -60.5252"
+	"ammo" "72"
 }
 
 ; =====================================================
