--- a/cfg/stripper/maps/c4m1_milltown_a.cfg
+++ b/cfg/stripper/maps/c4m1_milltown_a.cfg
@@ -77,11 +77,13 @@ add:
 	"classname" "weapon_pumpshotgun"
 	"origin" "-6689 7628.07 101.259"
 	"angles" "0 0 90"
+	"ammo" "72"
 }
 {
 	"classname" "weapon_smg"
 	"origin" "-6690.96 7641.87 101.223"
 	"angles" "0 30 90"
+	"ammo" "650"
 }
 ; --- Single magnum spawn before diner
 {
