Started work on c5m5 Reworked fence covers on c1m3 to fix wallbanging issues Updated global filters Stop c2m5 fireworks from looping during 2nd tank

--- a/cfg/stripper/global_filters.cfg
+++ b/cfg/stripper/global_filters.cfg
@@ -22,6 +22,17 @@ modify:
 	match:
 	{
 		"classname" "weapon_spawn"
+		"weapon_selection" "any"
+	}
+	replace:
+	{
+		"weapon_selection" "tier1_any"
+	}
+}
+{
+	match:
+	{
+		"classname" "weapon_spawn"
 		"weapon_selection" "any_primary"
 	}
 	replace:
@@ -44,7 +55,18 @@ modify:
 	match:
 	{
 		"classname" "weapon_spawn"
-		"weapon_selection" "any"
+		"weapon_selection" "any_rifle"
+	}
+	replace:
+	{
+		"weapon_selection" "any_smg"
+	}
+}
+{
+	match:
+	{
+		"classname" "weapon_spawn"
+		"weapon_selection" "any_sniper_rifle"
 	}
 	replace:
 	{
@@ -55,7 +77,128 @@ modify:
 	match:
 	{
 		"classname" "weapon_spawn"
-		"weapon_selection" "any_sniper_rifle"
+		"weapon_selection" "any_shotgun"
+	}
+	replace:
+	{
+		"weapon_selection" "tier1_shotgun"
+	}
+}
+{
+	match:
+	{
+		"classname" "weapon_spawn"
+		"weapon_selection" "tier2_shotgun"
+	}
+	replace:
+	{
+		"weapon_selection" "tier1_shotgun"
+	}
+}
+{
+	match:
+	{
+		"classname" "weapon_spawn"
+		"weapon_selection" "weapon_autoshotgun"
+	}
+	replace:
+	{
+		"weapon_selection" "tier1_shotgun"
+	}
+}
+{
+	match:
+	{
+		"classname" "weapon_spawn"
+		"weapon_selection" "weapon_shotgun_spas"
+	}
+	replace:
+	{
+		"weapon_selection" "tier1_shotgun"
+	}
+}
+{
+	match:
+	{
+		"classname" "weapon_spawn"
+		"weapon_selection" "weapon_rifle"
+	}
+	replace:
+	{
+		"weapon_selection" "any_smg"
+	}
+}
+{
+	match:
+	{
+		"classname" "weapon_spawn"
+		"weapon_selection" "weapon_rifle_desert"
+	}
+	replace:
+	{
+		"weapon_selection" "any_smg"
+	}
+}
+{
+	match:
+	{
+		"classname" "weapon_spawn"
+		"weapon_selection" "weapon_rifle_ak47"
+	}
+	replace:
+	{
+		"weapon_selection" "any_smg"
+	}
+}
+{
+	match:
+	{
+		"classname" "weapon_spawn"
+		"weapon_selection" "weapon_hunting_rifle"
+	}
+	replace:
+	{
+		"weapon_selection" "tier1_any"
+	}
+}
+{
+	match:
+	{
+		"classname" "weapon_spawn"
+		"weapon_selection" "weapon_sniper_military"
+	}
+	replace:
+	{
+		"weapon_selection" "tier1_any"
+	}
+}
+{
+	match:
+	{
+		"classname" "weapon_spawn"
+		"weapon_selection" "weapon_rifle_sg552"
+	}
+	replace:
+	{
+		"weapon_selection" "any_smg"
+	}
+}
+{
+	match:
+	{
+		"classname" "weapon_spawn"
+		"weapon_selection" "weapon_sniper_awp"
+	}
+	replace:
+	{
+		"weapon_selection" "tier1_any"
+	}
+}
+{
+	match:
+	{
+		"classname" "weapon_spawn"
+		"weapon_selection" "weapon_sniper_scout"
 	}
 	replace:
 	{
