--- a/cfg/stripper/maps/c2m5_concert.cfg
+++ b/cfg/stripper/maps/c2m5_concert.cfg
@@ -437,6 +437,18 @@ filter:
 ; ==             GFX / PARTICLES REMOVAL             ==
 ; ==        Remove visual effects from the map       ==
 ; =====================================================
+; --- Stop fireworks from firing forever during 2nd tank
+modify:
+{
+	match:
+	{
+		"targetname" "fireworks_relay"
+	}
+	delete:
+	{
+		"OnTrigger" "fireworks_relayTrigger3.1-1"
+	}
+}
 
 
 ; ###############  TRIGGERS AND BRUSHES  ##############
