--- a/cfg/stripper/maps/c1m3_mall.cfg
+++ b/cfg/stripper/maps/c1m3_mall.cfg
@@ -575,7 +575,7 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Jimmy Gibbs banner to block jumping around the glass panels
+; --- Jimmy Gibbs banner to block jumping around the glass panels (only 1 is solid to allow wallbanging)
 {
 	"classname" "prop_dynamic"
 	"origin" "-1260 -4136 112"
@@ -589,7 +589,7 @@ add:
 	"origin" "-1260 -4135 112"
 	"angles" "0 0 0"
 	"model" "models/props_vehicles/mall_banner.mdl"
-	"solid" "6"
+	"solid" "0"
 	"disableshadows" "1"
 }
 ; --- Remove glass by hanging shelf
@@ -690,80 +690,42 @@ add:
 
 ; =====================================================
 ; ==                   FENCE COVERS                  ==
-; ==    Add green covers to the fences for spawns    ==
+; ==   Add covers or props to the fences for spawns  ==
 ; =====================================================
 add:
 ; --- Immediately outside saferoom
 {
 	"classname" "prop_dynamic"
-	"origin" "6826 -1775 26"
-	"angles" "0 64.5 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
+	"origin" "6708 -1748 -18"
+	"angles" "0 97.5 0"
+	"model" "models/props_urban/fence_cover001_128.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- By the collapsed gate after the first set of escalators
+{
+	"classname" "prop_dynamic"
+	"origin" "5196 -2585 280"
+	"angles" "0 75 0"
+	"model" "models/props_mall/mall_display_07.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
 {
-	"classname" "prop_dynamic"
-	"origin" "6800 -1763 26"
-	"angles" "0 64.5 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
+	"classname" "env_physics_blocker"
+	"origin" "5196 -2585 428"
+	"angles" "0 75 0"
+	"mins" "-18 -48 -60"
+	"maxs" "18 48 60"
+	"boxmins" "-18 -48 -60"
+	"boxmaxs" "18 48 60"
+	"initialstate" "1"
+	"BlockType" "1"
 }
-; --- To the right of saferoom
+; --- In front of the escalators on the far side in the second escalator room
 {
 	"classname" "prop_dynamic"
-	"origin" "6119 -1667 27"
-	"angles" "0 300 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "6144 -1652.5 27"
-	"angles" "0 300 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-; --- By the partially collapsed gate after saferoom (x2)
-{
-	"classname" "prop_dynamic"
-	"origin" "5107 -2590.5 282"
-	"angles" "0 262 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "5079 -2587 282"
-	"angles" "0 262 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "5176 -2604 282"
-	"angles" "0 255 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "5203 -2611 282"
-	"angles" "0 255 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-; --- In front of the escalators on the far side in the second escalator room (x2)
-{
-	"classname" "prop_dynamic"
-	"origin" "3572 -2693 282"
+	"origin" "3573 -2693 280"
 	"angles" "0 219 0"
 	"model" "models/props_urban/fence_cover001_64.mdl"
 	"solid" "6"
@@ -771,114 +733,56 @@ add:
 }
 {
 	"classname" "prop_dynamic"
-	"origin" "3590 -2715 282"
-	"angles" "0 219 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "3494 -2628 282"
+	"origin" "3522 -2638 280"
 	"angles" "0 249 0"
 	"model" "models/props_urban/fence_cover001_64.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
+; --- In the dark area in the second escalator room
 {
 	"classname" "prop_dynamic"
-	"origin" "3521 -2638 282"
-	"angles" "0 249 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-; --- In the dark area in the second escalator room (x3)
-{
-	"classname" "prop_dynamic"
-	"origin" "3086 -2460 282"
-	"angles" "0 339 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
+	"origin" "2928 -2814 280"
+	"angles" "0 136.5 0"
+	"model" "models/props_mall/mall_display_07.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
 {
-	"classname" "prop_dynamic"
-	"origin" "3095 -2434 282"
-	"angles" "0 339 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "2992 -2746 282"
-	"angles" "0 337 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "3002.5 -2721 282"
-	"angles" "0 337 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "2953 -2817 282"
-	"angles" "0 316.5 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "2933 -2839 282"
-	"angles" "0 316.5 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
+	"classname" "env_physics_blocker"
+	"origin" "2928 -2814 428"
+	"angles" "0 136.5 0"
+	"mins" "-18 -48 -60"
+	"maxs" "18 48 60"
+	"boxmins" "-18 -48 -60"
+	"boxmaxs" "18 48 60"
+	"initialstate" "1"
+	"BlockType" "1"
 }
 ; --- On the right after going down second set of escalators
 {
 	"classname" "prop_dynamic"
-	"origin" "3728 -2294 3"
-	"angles" "0 309 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
+	"origin" "3703 -2285 0"
+	"angles" "0 129 0"
+	"model" "models/props_mall/mall_display_07.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
 {
-	"classname" "prop_dynamic"
-	"origin" "3706 -2312 3"
-	"angles" "0 309 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
+	"classname" "env_physics_blocker"
+	"origin" "3703 -2285 148"
+	"angles" "0 129 0"
+	"mins" "-18 -48 -60"
+	"maxs" "18 48 60"
+	"boxmins" "-18 -48 -60"
+	"boxmaxs" "18 48 60"
+	"initialstate" "1"
+	"BlockType" "1"
 }
-; --- On the left after going down second set of escalators (x2)
+; --- On the left after going down second set of escalators
 {
 	"classname" "prop_dynamic"
-	"origin" "3726 -2906.5 3"
-	"angles" "0 90 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "3755 -2906 3"
-	"angles" "0 90 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "3452 -2897.5 3"
+	"origin" "3452 -2897.5 1"
 	"angles" "0 84 0"
 	"model" "models/props_urban/fence_cover001_64.mdl"
 	"solid" "6"
@@ -886,16 +790,36 @@ add:
 }
 {
 	"classname" "prop_dynamic"
-	"origin" "3480 -2900 3"
-	"angles" "0 84 0"
+	"origin" "3372 -2907 1"
+	"angles" "0 94 0"
 	"model" "models/props_urban/fence_cover001_64.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- In front after going down second set of escalators (x2)
+; --- In front after going down second set of escalators
 {
 	"classname" "prop_dynamic"
-	"origin" "3191 -2718 3"
+	"origin" "3167 -2707 0"
+	"angles" "0 189.5 0"
+	"model" "models/props_mall/mall_display_07.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "3167 -2707 148"
+	"angles" "0 189.5 0"
+	"mins" "-18 -48 -60"
+	"maxs" "18 48 60"
+	"boxmins" "-18 -48 -60"
+	"boxmaxs" "18 48 60"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Around the corner after the second set of escalators
+{
+	"classname" "prop_dynamic"
+	"origin" "2554 -1927 1"
 	"angles" "0 9 0"
 	"model" "models/props_urban/fence_cover001_64.mdl"
 	"solid" "6"
@@ -903,56 +827,7 @@ add:
 }
 {
 	"classname" "prop_dynamic"
-	"origin" "3186 -2689 3"
-	"angles" "0 9 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "3157 -2614 3"
-	"angles" "0 19 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "3147 -2586 3"
-	"angles" "0 19 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-; --- To the right before the third set of escalators before the event path (x2)
-{
-	"classname" "prop_dynamic"
-	"origin" "2559 -1955 3"
-	"angles" "0 9 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "2554 -1927 3"
-	"angles" "0 9 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "2544 -1842 3"
-	"angles" "0 354 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "2547 -1813 3"
+	"origin" "2544 -1842 1"
 	"angles" "0 354 0"
 	"model" "models/props_urban/fence_cover001_64.mdl"
 	"solid" "6"
@@ -961,29 +836,13 @@ add:
 ; --- Right under the third set of escalators before the event path
 {
 	"classname" "prop_dynamic"
-	"origin" "2611 -663 3"
+	"origin" "2611 -663 1"
 	"angles" "0 189 0"
 	"model" "models/props_urban/fence_cover001_64.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
-{
-	"classname" "prop_dynamic"
-	"origin" "2616 -692 3"
-	"angles" "0 189 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-; --- In the back corner after going up the third set of escalators before the event path (x2)
-{
-	"classname" "prop_dynamic"
-	"origin" "2516 230 282"
-	"angles" "0 204 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
+; --- In the back corner after going up the third set of escalators before the event path
 {
 	"classname" "prop_dynamic"
 	"origin" "2528 204 282"
@@ -1000,56 +859,27 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
+; --- To the left of the drop leading to the event path
 {
 	"classname" "prop_dynamic"
-	"origin" "2706 65 282"
-	"angles" "0 249 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-; --- To the left of the drop leading to the event path (x2)
-{
-	"classname" "prop_dynamic"
-	"origin" "1795 -1125 282"
-	"angles" "0 84 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
+	"origin" "1778 -1144 280"
+	"angles" "0 264 0"
+	"model" "models/props_mall/mall_display_07.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
 {
-	"classname" "prop_dynamic"
-	"origin" "1766 -1122 282"
-	"angles" "0 84 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
+	"classname" "env_physics_blocker"
+	"origin" "1778 -1144 428"
+	"angles" "0 264 0"
+	"mins" "-18 -48 -60"
+	"maxs" "18 48 60"
+	"boxmins" "-18 -48 -60"
+	"boxmaxs" "18 48 60"
+	"initialstate" "1"
+	"BlockType" "1"
 }
-{
-	"classname" "prop_dynamic"
-	"origin" "2004 -1211 282"
-	"angles" "0 54 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "1980 -1194 282"
-	"angles" "0 54 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-; --- To the left at the entrance of the end saferoom area (x2)
-{
-	"classname" "prop_dynamic"
-	"origin" "-379 -4481 282"
-	"angles" "0 112 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
+; --- At the entrance of the final area after the event
 {
 	"classname" "prop_dynamic"
 	"origin" "-407 -4493 282"
@@ -1068,26 +898,20 @@ add:
 }
 {
 	"classname" "prop_dynamic"
-	"origin" "-500 -4539 282"
-	"angles" "0 120 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-; --- To the right at the entrance of the end saferoom area
-{
-	"classname" "prop_dynamic"
-	"origin" "-112 -4439 282"
-	"angles" "0 247 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
+	"origin" "-91 -4425 280"
+	"angles" "0 67.5 0"
+	"model" "models/props_mall/mall_display_07.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
 {
-	"classname" "prop_dynamic"
-	"origin" "-85 -4450 282"
-	"angles" "0 247 0"
-	"model" "models/props_urban/fence_cover001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
+	"classname" "env_physics_blocker"
+	"origin" "-91 -4425 428"
+	"angles" "0 67.5 0"
+	"mins" "-18 -48 -60"
+	"maxs" "18 48 60"
+	"boxmins" "-18 -48 -60"
+	"boxmaxs" "18 48 60"
+	"initialstate" "1"
+	"BlockType" "1"
 }
